RESOLVED FIXED305396
[threaded-animations] merlyndesignworks.co.uk page crashes repeatedly (invalid message: RemoteLayerTreeDrawingAreaProxy_CommitLayerTree)
https://bugs.webkit.org/show_bug.cgi?id=305396
Summary [threaded-animations] merlyndesignworks.co.uk page crashes repeatedly (invali...
Antoine Quint
Reported 2026-01-13 08:45:21 PST
Trying to load https://merlyndesignworks.co.uk/about with a ToT build crashes repeatedly.
Attachments
Antoine Quint
Comment 1 2026-01-13 08:46:09 PST
Antoine Quint
Comment 2 2026-01-13 08:50:30 PST
EWS
Comment 3 2026-01-13 13:30:06 PST
Committed 305530@main (b7aad8b68633): <https://commits.webkit.org/305530@main> Reviewed commits have been landed. Closing PR #56499 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.